# cpplox

./: CMakeLists.txt  Makefile  README.md
lox/: CMakeLists.txt  lox.cpp
lox/analysis/: CMakeLists.txt  resolver.cpp  resolver.hpp
lox/ast/: CMakeLists.txt  ast.hpp  ast_printer.cpp  ast_printer.hpp  expr.hpp
lox/error/: CMakeLists.txt  error_handler.cpp  error_handler.hpp  exceptions.hpp
lox/interpreter/: CMakeLists.txt  environment.cpp  environment.hpp  interpreter.cpp  interpreter.hpp  objects.hpp
lox/lexer/: CMakeLists.txt  scanner.cpp  scanner.hpp  token.cpp  token.hpp
lox/parser/: CMakeLists.txt  parser.cpp  parser.hpp
test/: function.lox  if.lox  loop.lox  primitives.lox  scope.lox
test/class/: class1.lox  class2.lox
test/function/: function2.lox
test/if/: if1.lox
test/loop/: loop1.lox
test/primitives/: primitives.lox
test/runtimeerror/: continue1.lox  continue2.lox
tests/: block  break  closure  continue  counting  factorial  fibonacci  for_continue  function  scope_problem
tools/: CMakeLists.txt  generate_ast.cpp  test.py
